--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>This is my first website, version control using Git</h1>
-</body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nulla facilis reprehenderit doloribus cupiditate velit totam commodi quod recusandae! Iste, minus? Libero illo impedit, corrupti quis expedita itaque corporis placeat! Nihil et ducimus fugiat odio voluptatibus iusto! In autem totam ratione omnis fugit nam et rem ea, ab sequi incidunt nesciunt consectetur dolorem quos eos debitis quo facilis dolore expedita.</p>
+  </body>
 </html>
